@@ -4313,6 +4313,11 @@ public:
       ? lookup (val.double_value ()) : graphics_handle ();
   }
 
+  static graphics_object get_object (double val)
+  {
+    return get_object (lookup (val));
+  }
+
   static graphics_object get_object (const graphics_handle& h)
   {
     return instance_ok () ? instance->do_get_object (h) : graphics_object ();
